Fix Bug 392520 - Long URLs are not clickable in plaintext message viewer

FIXED-IN: 5.8.0
BUG: 392520